--- a/media/resourceEditor.css
+++ b/media/resourceEditor.css
@@ -11,6 +11,15 @@
   margin-bottom: 10px;
 }
 
+.searchbar {
+  width: 70%;
+}
+
+.create-button{
+  width: 30%;
+  min-width: 150px;
+}
+
 .table-wrapper {
   height: calc(100dvh - 50px);
   overflow-y: visible;
@@ -45,4 +54,9 @@
 
 .table-row {
   width: 100vw;
+}
+
+.delete-button {
+  padding-left: 5px;
+  padding-right: 5px;
 }
