--- a/media/resourceEditor.css
+++ b/media/resourceEditor.css
@@ -4,6 +4,11 @@
   overflow: hidden;
 }
 
+html {
+  width: 100%;
+  height: 100%;
+}
+
 .toolbar {
   width: 100%;
   display: flex;
@@ -11,7 +16,7 @@
   margin-bottom: 10px;
 }
 
-.create-button{
+.create-button {
   width: 25%;
   min-width: 100px;
 }
@@ -69,4 +74,10 @@
 
 .hidden {
   display: none;
+}
+
+.plain-body {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
 }
