--- a/media/resourceEditor.css
+++ b/media/resourceEditor.css
@@ -9,6 +9,10 @@ html {
   height: 100%;
 }
 
+body {
+  height: 100%;
+}
+
 .toolbar {
   width: 100%;
   display: flex;
@@ -22,7 +26,7 @@ html {
 }
 
 .table-wrapper {
-  height: calc(100dvh - 50px);
+  height: calc(100dvh - 80px);
   overflow-y: visible;
 }
 
@@ -78,6 +82,19 @@ html {
 
 .plain-body {
   width: 100%;
-  height: 100%;
+  height: calc(100dvh - 40px);
   overflow: auto;
+  resize: none;
+}
+
+.bottom-bar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: end;
+}
+
+#change-view-type-button {
+  width: 100px;
+  margin-right: 20px;
 }
